# CABLE_benchmarking

./: .gitignore  .readthedocs.yaml  AUTHORS  ChangeLog  README.md  benchcab-dev.yaml  benchmark_cable_qsub.sh  build_cable.py  gadi_env.sh  generate_qsub_script.py  get_cable.py  initialise_qsub_job.py  initialise_site_qsub_job.py  initialise_site_runs.py  initialise_spatial_qsub_job.py  initialise_spatial_runs.py  make_seasonal_plots.py  meta.yaml  mkdocs-requirements.txt  mkdocs.yml  ruff.toml  run_comparison.py  run_site_comparison.py  run_spatial_comparison.py  setup.cfg  setup.py  user_options.py  versioneer.py
.conda/: benchcab-dev.yaml  build_env.yaml  meta.yaml
.github/workflows/: build_and_preview.yml  build_and_publish.yml  cd.yaml  ci.yaml  pytest.yaml
benchcab/: __init__.py  bench_config.py  benchcab.py  benchsiterun.py  benchtree.py  build_cable.py  cable_utils.py  cli.py  comparison.py  config.py  environment_modules.py  fluxsite.py  get_cable.py  internal.py  job_script.py  main.py  model.py  repository.py  run_cable_site.py  run_comparison.py  set_default_paths.py  task.py  workdir.py
benchcab/cli/: benchcab.py
benchcab/data/: config-schema.json  config-schema.yml
benchcab/scripts/: bench_config.py
benchcab/setup/: cases_fluxsites.py  pbs_fluxsites.py
benchcab/utils/: __init__.py  fs.py  logging.py  os.py  pbs.py  repo.py  subprocess.py
docs/: index.md
docs/user_guide/: config_options.md  default_science_configurations.md  index.md  (+2 more)
scripts/: benchmark_seasonal_plot.py  build_cable.py  cable_utils.py  call_wrapper.py  config.py  generate_qsub_script.py  get_cable.py  offline_metrics.py  run_cable_site.py  run_cable_spatial.py  set_default_paths.py  setup_integration_branch.py
setup/: cases_fluxsites.py  directory_structure.py  machine_inits.py  pbs_fluxsites.py  repo_init.py
tests/: common.py  conftest.py  test_bench_config.py  test_benchcab.py  test_benchtree.py  test_build.py  test_build_cable.py  test_cli.py  test_comparison.py  test_config.py  test_fluxsite.py  test_fs.py  test_get_cable.py  test_job_script.py  test_logging.py  test_model.py  test_pbs.py  test_repository.py  test_subprocess.py  test_task.py  test_utils.py  test_workdir.py
(+5 files in other folders)
